Made CSS changes

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -42,47 +42,23 @@
 
         </ul>
     </nav>
-    <!--div class="container pt-3">
-        <div class="row">
-            <div class="col-6 d-flex justify-content-center align-items">
-                <i class="fas fa-code fa-2x text-warning pb-3"></i>
-                <h5 class="text-white d-inline pl-2">PORTFOLIO</h5>
-            </div>
-        </div>
-        <div class="col-6 " id="link">
-            <div class="row">
-                <div class="col-3 pl-15">
-                    <a href="#about" class="text-white navigation-link">About</a>
-                </div>
-                <div class="col-3 pl-15">
-                    <a href="#skills" class="text-white navigation-link">Skills</a>
-                </div>
-                <div class="col-3 pl-15">
-                    <a href="#connect" class="text-white navigation-link">Connect</a>
-                </div>
-                <div class="col-3 pl-15">
-                    <a href="#inter" class="text-white navigation-link">Intersts</a>
-                </div>
-            </div>
 
+    <!-- <div class="container" id="text-container"> -->
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-3">
+            <img src="img\me 3.jpg" alt="model" class="model mt-4 ">
         </div>
-    </div-->
-    <div class="container" id="text-container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-3">
-                <img src="img\me 3.jpg" alt="model" class="model mt-4 ">
-            </div>
-            <div class="col-md-7 text-container">
-                <p>Hello,</p>
-                <h1 class="font-weight-bold">I'M AKSHAY</h1>
-                <p>Web developer | Pythoneer | Student</p>
-                <p>Currently Studying 2nd year in Computer Science Engineering <br> at Sathyabama Institute of Science and Technology,Chennai </p>
-                <button type="button" class="btn btn-dark">Contact me</button>
-                <button type="button" class="btn btn-dark">Download CV</button>
-            </div>
+        <div class="col-md-7 text-container">
+            <p>Hello,</p>
+            <h1 class="font-weight-bold">I'M AKSHAY</h1>
+            <p>Web developer | Pythoneer | Student</p>
+            <p>Currently Studying 2nd year in Computer Science Engineering <br> at Sathyabama Institute of Science and Technology,Chennai </p>
+            <button type="button" class="btn btn-dark">Contact me</button>
+            <button type="button" class="btn btn-dark">Download CV</button>
         </div>
     </div>
+    <!-- </div> -->
 
 
 
